labs/sap-rise-scoped-peering-fwaas/show-output/s1-spoke-reachability-fix-20260929T173839Z/02-f2-create-route-table.json
{
  "disableBgpRoutePropagation": true,
  "etag": "W/\"cb108c46-5b19-44d5-88f0-7a6770f9eae9\"",
  "id": "/subscriptions/a8fbd8e1-fb5a-4411-804a-4ac80929c93c/resourceGroups/rg-saprise-swedencentral/providers/Microsoft.Network/routeTables/rt-spoke-nva-return",
  "location": "swedencentral",
  "name": "rt-spoke-nva-return",
  "provisioningState": "Succeeded",
  "resourceGroup": "rg-saprise-swedencentral",
  "resourceGuid": "e7a3cb0c-237f-4a1d-98a9-720a0fd0bdb2",
  "routes": [],
  "type": "Microsoft.Network/routeTables"
}
